--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-light text-center p-2">
-	<p class="h3">Todos lo derechos - 2020</p>
+	<p class="h3">Todos lo derechos - 2020 - 2024 💯</p>
 </footer>
 <!-- SCRIPTS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
