--- a/src/views/index.html
+++ b/src/views/index.html
@@ -20,7 +20,7 @@
 					<i class="fa fa-facebook fa-10x"></i>
 				</div>
 				<div class="col-sm-6" id="blog">
-					<h3>Blog : cual es el sigiente nevado</h3>
+					<h3>Blog : cual es el siguiente nevado 🚵</h3>
 				</div>
 			</div>
 		</div>
